--- a/style.css
+++ b/style.css
@@ -1,13 +1,61 @@
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.box {
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    position: absolute;
+    right: 50px;
+    top: -50px;
+    z-index: 1;
 }
 
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 144px;
+.box-2 {
+    width: 200px;
+    height: 200px;
+    background-color: dodgerblue;
+    position: absolute;
+    right: 150px;
+    top: -50px;
+    z-index: 2;
+}
+
+.parent-box {
+    width: 100%;
+    height: 100vh;
+    margin: 100px;
+    background-color: gold;
+    position: relative;
+}
+
+.fixed {
+    border: 2px solid green;
+    padding: 8px 32px;
+    display: inline;
+    font-size: 24px;
+    background-color: gold;
+    color: green;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    text-decoration: none;
+    z-index: 9;
+}
+
+.header {
+    text-align: center;
+    font-size: 60px;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+.sticky-box {
+    width: 100%;
+    height: 80px;
+    background-color: orange;
+    text-align: center;
+    position: sticky;
+    top: 50px;
+    left: 0px;
+    z-index: 1;
 }
